--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body{
 .book-info{
     display: flex;
     border-bottom: 1px solid #e9e9e9;
+    margin: 10px;
 }
 .book-detail{
     display: flex;
@@ -65,7 +66,7 @@ body{
 }
 
 .book-img{
-    margin:20px;
+    margin-right: 10px;
 }
 .book-detail{
     margin-left: 10px;
