--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
     display: flex;
     flex-direction: column;
     margin-left: 10px;
-    width: 100%;
+    width: 893px;
     height: 100%;
 }
 
@@ -84,9 +84,25 @@ body{
     justify-content: space-between;
 }
 
+
 .pagination-wrap{
     padding-top: 10px;
     border-bottom: 1px solid #e9e9e9;
+    position: relative;
+    width: 100%;
+    height: 50px;
+}
+.pagination-wrap div{
+    float: left;
+}
+.page-nav{
+    width: 300px;
+}
+.goingPage-wrap{
+    position: absolute;
+    width: 300px;
+    right: 0;
+    text-align: right;
 }
 .page-link{
     border: none;
@@ -100,8 +116,7 @@ body{
     width: 80px;
 }
 .page-btn{
-    background: rgb(86, 159, 255);
-    border-radius: 50%;
+    border: none;
 }
 
 
